--- a/SVPC/Code/philly/FindLeakTargetSingleThread.ipynb
+++ b/SVPC/Code/philly/FindLeakTargetSingleThread.ipynb
@@ -136,13 +136,13 @@
     "    series_str = df[f2]\n",
     "    nz = series_str.apply(lambda x: len(x[x!=0]), axis=1)\n",
     "    series_str = series_str[nz >= NZ_NUM]\n",
-    "    series_str['key'] = series_str.apply(lambda x: \"_\".join(x.round(2).astype(str)), axis=1)\n",
+    "    series_str['key'] = series_str.apply(tuple), axis=1)\n",
     "    series_str = series_str[~series_str.duplicated(['key'], keep=False)] \n",
     "    series_str['pred'] = df[cols[lag]]\n",
     "    series_str = series_str[['key', 'pred']]\n",
     "    \n",
     "    series_shifted_str = df.loc[search_ind, f1]\n",
-    "    series_shifted_str['key'] = series_shifted_str.apply(lambda x: \"_\".join(x.round(2).astype(str)), axis=1)\n",
+    "    series_shifted_str['key'] = series_shifted_str.apply(tuple), axis=1)\n",
     "    series_shifted_str = series_shifted_str.reset_index()[['key', 'ID']]\n",
     "    \n",
     "    target_vals = series_shifted_str.merge(series_str, how='left', on='key').set_index('ID')\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,114 @@
       "begin_ind:  1 end_ind:  2 search_ind_len:  46399\n",
       "Done\n",
       "Find leak in train and test:  0 4212 leak train right:  0 0\n",
-      "begin_ind:  2 end_ind:  3 search_ind_len:  45130\n"
+      "begin_ind:  2 end_ind:  3 search_ind_len:  45130\n",
+      "Done\n",
+      "Find leak in train and test:  0 4949 leak train right:  0 0\n",
+      "begin_ind:  3 end_ind:  4 search_ind_len:  44393\n",
+      "Done\n",
+      "Find leak in train and test:  0 5512 leak train right:  0 0\n",
+      "begin_ind:  4 end_ind:  5 search_ind_len:  43830\n",
+      "Done\n",
+      "Find leak in train and test:  0 5935 leak train right:  0 0\n",
+      "begin_ind:  5 end_ind:  6 search_ind_len:  43407\n",
+      "Done\n",
+      "Find leak in train and test:  0 6235 leak train right:  0 0\n",
+      "begin_ind:  6 end_ind:  7 search_ind_len:  43107\n",
+      "Done\n",
+      "Find leak in train and test:  0 6442 leak train right:  0 0\n",
+      "begin_ind:  7 end_ind:  8 search_ind_len:  42900\n",
+      "Done\n",
+      "Find leak in train and test:  0 6592 leak train right:  0 0\n",
+      "begin_ind:  8 end_ind:  9 search_ind_len:  42750\n",
+      "Done\n",
+      "Find leak in train and test:  0 6763 leak train right:  0 0\n",
+      "begin_ind:  9 end_ind:  10 search_ind_len:  42579\n",
+      "Done\n",
+      "Find leak in train and test:  0 6898 leak train right:  0 0\n",
+      "begin_ind:  10 end_ind:  11 search_ind_len:  42444\n",
+      "Done\n",
+      "Find leak in train and test:  0 7013 leak train right:  0 0\n",
+      "begin_ind:  11 end_ind:  12 search_ind_len:  42329\n",
+      "Done\n",
+      "Find leak in train and test:  0 7109 leak train right:  0 0\n",
+      "begin_ind:  12 end_ind:  13 search_ind_len:  42233\n",
+      "Done\n",
+      "Find leak in train and test:  0 7185 leak train right:  0 0\n",
+      "begin_ind:  13 end_ind:  14 search_ind_len:  42157\n",
+      "Done\n",
+      "Find leak in train and test:  0 7259 leak train right:  0 0\n",
+      "begin_ind:  14 end_ind:  15 search_ind_len:  42083\n",
+      "Done\n",
+      "Find leak in train and test:  0 7318 leak train right:  0 0\n",
+      "begin_ind:  15 end_ind:  16 search_ind_len:  42024\n",
+      "Done\n",
+      "Find leak in train and test:  0 7376 leak train right:  0 0\n",
+      "begin_ind:  16 end_ind:  17 search_ind_len:  41966\n",
+      "Done\n",
+      "Find leak in train and test:  0 7424 leak train right:  0 0\n",
+      "begin_ind:  17 end_ind:  18 search_ind_len:  41918\n",
+      "Done\n",
+      "Find leak in train and test:  0 7462 leak train right:  0 0\n",
+      "begin_ind:  18 end_ind:  19 search_ind_len:  41880\n",
+      "Done\n",
+      "Find leak in train and test:  0 7490 leak train right:  0 0\n",
+      "begin_ind:  19 end_ind:  20 search_ind_len:  41852\n",
+      "Done\n",
+      "Find leak in train and test:  0 7538 leak train right:  0 0\n",
+      "begin_ind:  20 end_ind:  21 search_ind_len:  41804\n",
+      "Done\n",
+      "Find leak in train and test:  0 7576 leak train right:  0 0\n",
+      "begin_ind:  21 end_ind:  22 search_ind_len:  41766\n",
+      "Done\n",
+      "Find leak in train and test:  0 7605 leak train right:  0 0\n",
+      "begin_ind:  22 end_ind:  23 search_ind_len:  41737\n",
+      "Done\n",
+      "Find leak in train and test:  0 7640 leak train right:  0 0\n",
+      "begin_ind:  23 end_ind:  24 search_ind_len:  41702\n",
+      "Done\n",
+      "Find leak in train and test:  0 7661 leak train right:  0 0\n",
+      "begin_ind:  24 end_ind:  25 search_ind_len:  41681\n",
+      "Done\n",
+      "Find leak in train and test:  0 7678 leak train right:  0 0\n",
+      "begin_ind:  25 end_ind:  26 search_ind_len:  41664\n",
+      "Done\n",
+      "Find leak in train and test:  0 7692 leak train right:  0 0\n",
+      "begin_ind:  26 end_ind:  27 search_ind_len:  41650\n",
+      "Done\n",
+      "Find leak in train and test:  0 7705 leak train right:  0 0\n",
+      "begin_ind:  27 end_ind:  28 search_ind_len:  41637\n",
+      "Done\n",
+      "Find leak in train and test:  0 7718 leak train right:  0 0\n",
+      "begin_ind:  28 end_ind:  29 search_ind_len:  41624\n",
+      "Done\n",
+      "Find leak in train and test:  0 7730 leak train right:  0 0\n",
+      "begin_ind:  29 end_ind:  30 search_ind_len:  41612\n",
+      "Done\n",
+      "Find leak in train and test:  0 7743 leak train right:  0 0\n",
+      "begin_ind:  30 end_ind:  31 search_ind_len:  41599\n",
+      "Done\n",
+      "Find leak in train and test:  0 7757 leak train right:  0 0\n",
+      "begin_ind:  31 end_ind:  32 search_ind_len:  41585\n",
+      "Done\n",
+      "Find leak in train and test:  0 7764 leak train right:  0 0\n",
+      "begin_ind:  32 end_ind:  33 search_ind_len:  41578\n",
+      "Done\n",
+      "Find leak in train and test:  0 7770 leak train right:  0 0\n",
+      "begin_ind:  33 end_ind:  34 search_ind_len:  41572\n",
+      "Done\n",
+      "Find leak in train and test:  0 7773 leak train right:  0 0\n",
+      "begin_ind:  34 end_ind:  35 search_ind_len:  41569\n",
+      "Done\n",
+      "Find leak in train and test:  0 7779 leak train right:  0 0\n",
+      "begin_ind:  35 end_ind:  36 search_ind_len:  41563\n",
+      "Done\n",
+      "Find leak in train and test:  0 7782 leak train right:  0 0\n",
+      "begin_ind:  36 end_ind:  37 search_ind_len:  41560\n",
+      "Done\n",
+      "Find leak in train and test:  0 7785 leak train right:  0 0\n",
+      "begin_ind:  37 end_ind:  38 search_ind_len:  41557\n",
+      "Done\n",
+      "Find leak in train and test:  0 7797 leak train right:  0 0\n"
      ]
     }
    ],
@@ -253,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
